--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family:Arial, Helvetica, sans-serif;
   }
   .container {
     width: 65%;
@@ -91,14 +92,18 @@ background-color: #23272A;
   }
   section{
     display: flex;
-    height: 200px;
     padding: 25px;
   }
   .large{
     width: 75%;
   }
   .small{
+    margin-top: 35px;
     width: 25%;
+  
+  }
+  h2{
+font-size: 2rem;
   }
   .bottom{
     display: flex;
@@ -106,10 +111,7 @@ background-color: #23272A;
     justify-content: space-around;
   }
   .banner{
-    background-color: #228B22;
-    border: 2px dashed black;
-    height: 250px;
-    width: 55%;
+    text-align: center;
   }
   footer{
     background-color: black;
@@ -124,8 +126,7 @@ background-color: #23272A;
     height: 250px;
     width: 18%;
   }
-  .pink{ border: 2px dashed black;
-    background-color: #F08080;
+  .pink{ display: flex;
     flex-grow: 2;
   }
  .blu{
@@ -146,4 +147,13 @@ background-color: #23272A;
     width: 75px;
     font-size: 10px;
     text-align: center;
+  }
+  .h2sfondo{
+   padding: 25px;
+    background-image: url(../img/stars.svg);
+    background-size: contain;
+   
+  }
+  .mac2color{
+background-color: #7289DA;
   }
